fix wave contrast error with bg,and darken glass card

--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,11 @@
 }
 
 .text-shadow-white {
-    text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.3);
+  text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.9);
+}
+
+.text-shadow-black {
+  text-shadow: 2px 0px 0px rgba(0, 0, 0, 0.5); /* Example: 2px right, 2px down, 3px blur, 70% opacity black */
 }
 
 .bg-image {  
